--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,5 @@
     <string name="linked_reminder_delay">Delay for following dose</string>
     <string name="delay">Delay</string>
     <string name="linked_reminder_summary">After reminder at %1$s</string>
+    <string name="delete_re_raise_event">Do you want to delete this event and re-raise the notification?</string>
 </resources>
