When pressing the taken/skipped button again, the notification can be… (#346)
* When pressing the taken/skipped button again, the notification can be re-raised now

* Bump version to v1.12.1

* Translation now keeps indentation

* Fix indentation

* Code climate issues

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -162,4 +162,5 @@
     <string name="linked_reminder_delay">Retraso para la siguiente dosis</string>
     <string name="delay">Retraso</string>
     <string name="linked_reminder_summary">Tras recordatorio en %1$s</string>
+    <string name="delete_re_raise_event">¿Desea eliminar este evento y volver a subir la notificación?</string>
 </resources>
