--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,6 @@
     <string name="delay">Delay</string>
     <string name="linked_reminder_summary">After reminder at %1$s</string>
     <string name="delete_re_raise_event">Do you want to delete this event and re-raise the notification?</string>
+    <string name="preview_next_reminders_widget_line" translatable="false">12:00: 1 Selen (200 µg)</string>
+    <string name="preview_latest_reminders_widget_line" translatable="false">12:00: Taken 1 Selen (200 µg)</string>
 </resources>
