--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,23 @@
     <string name="delete_re_raise_event">Do you want to delete this event and re-raise the notification?</string>
     <string name="preview_next_reminders_widget_line" translatable="false">12:00: 1 Selen (200 µg)</string>
     <string name="preview_latest_reminders_widget_line" translatable="false">12:00: Taken 1 Selen (200 µg)</string>
+    <string name="time_based_reminder">Time based reminder</string>
+    <string name="interval_based_reminder">Interval based reminder</string>
+    <plurals name="minutes">
+        <item quantity="one">minute</item>
+        <item quantity="other">minutes</item>
+    </plurals>
+    <string name="minutes">Minutes</string>
+    <plurals name="hours">
+        <item quantity="one">hour</item>
+        <item quantity="other">hours</item>
+    </plurals>
+    <string name="hours">Hours</string>
+    <plurals name="days">
+        <item quantity="one">day</item>
+        <item quantity="other">days</item>
+    </plurals>
+    <string name="days">Days</string>
+    <string name="create_reminder">Create reminder</string>
+    <string name="interval">Interval</string>
 </resources>
