--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,4 +184,5 @@
     <string name="days">Days</string>
     <string name="create_reminder">Create reminder</string>
     <string name="interval">Interval</string>
+    <string name="interval_start_time">Interval start time</string>
 </resources>
