Add setting for interval scheduling behavior

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,4 +185,6 @@
     <string name="create_reminder">Create reminder</string>
     <string name="interval">Interval</string>
     <string name="interval_start_time">Interval start time</string>
+    <string name="interval_start_reminded">Next interval starts when reminded</string>
+    <string name="interval_start_processed">Next interval starts when taken or skipped</string>
 </resources>
