--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,4 +187,5 @@
     <string name="interval_start_time">Interval start time</string>
     <string name="interval_start_reminded">Next interval starts when reminded</string>
     <string name="interval_start_processed">Next interval starts when taken or skipped</string>
+    <string name="every_interval">Every %s</string>
 </resources>
