384 improve test actions (#387)
* Enable combined code coverage of AndroidTest and UnitTest

* Test simplification and fixes

* Restructured GitHub actions

* Action fixes

* Try with API level 33

* Try with API level 33

* Try fixing emulator

* Increase test stability

* Test fixes

* Fix new reminder dialog window size

* Use google_apis target

* Fix dialog padding

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Improvements for new reminder dialog

* Actions optimizations

* Test stability fixes

* Test stability fixes

* Test stability fixes

* Disabled the one test that does not work on GitHub Android emulator

* Re-enabled tests

* Added a further delay

* Fix CodeQL workflow

* Calculate expected reminder positions in list

* Test stability fix

* Stacktrace for test task

* Fix CodeQL

* Improve test stability

* Try to fix duplicate class issue

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -180,4 +180,5 @@
     <string name="interval_start_reminded">提醒时开始间隔</string>
     <string name="interval_start_processed">服用或跳过时开始间隔</string>
     <string name="every_interval">每 %s</string>
+    <string name="invalid_input">无效输入</string>
 </resources>
