--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -190,4 +190,8 @@
     <string name="interval_start_processed">Intervallo inizia quando viene preso o saltato</string>
     <string name="every_interval">Ogni %s</string>
     <string name="invalid_input">Inserimento non valido</string>
+    <string name="off">Spento</string>
+    <string name="once_below_threshold">Una volta quando si scende sotto la soglia</string>
+    <string name="always_below_threshold">Sempre quando è al di sotto della soglia</string>
+    <string name="out_of_stock_notification">È rimasto solo il %2$s del %1$s!\nConsidera di ricaricare presto il farmaco.</string>
 </resources>
