--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -185,4 +185,8 @@
     <string name="interval_start_processed">Intervall beginnt, wenn eingenommen oder übersprungen</string>
     <string name="every_interval">Alle %s</string>
     <string name="invalid_input">Ungültige Eingabe</string>
+    <string name="off">Aus</string>
+    <string name="once_below_threshold">Einmal beim Unterschreiten des Schwellenwerts</string>
+    <string name="always_below_threshold">Immer, wenn der Schwellenwert unterschritten wird</string>
+    <string name="out_of_stock_notification">Es ist nur noch %2$s von %1$s übrig! Bitte füllen Sie das Medikament bald nach.</string>
 </resources>
