--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -185,4 +185,8 @@
     <string name="interval_start_processed">Interval begint wanneer genomen of overgeslagen</string>
     <string name="every_interval">Elke %s</string>
     <string name="invalid_input">Ongeldige invoer</string>
+    <string name="off">Uit</string>
+    <string name="once_below_threshold">Eenmaal bij het dalen onder de drempel</string>
+    <string name="always_below_threshold">Altijd wanneer onder drempel</string>
+    <string name="out_of_stock_notification">Er is nog maar %2$s van %1$s over!\nOverweeg om het medicijn snel bij te vullen.</string>
 </resources>
