--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">Ayarlar</string>
     <string name="tab_overview">Genel Bakış</string>
@@ -186,4 +185,8 @@
     <string name="interval_start_processed">Aralık, alındığında veya atlandığında başlar</string>
     <string name="every_interval">Her %s</string>
     <string name="invalid_input">Geçersiz giriş</string>
+    <string name="off">Kapalı</string>
+    <string name="once_below_threshold">Eşiğin altına düştüğünde bir kez</string>
+    <string name="always_below_threshold">Her zaman eşiğin altında olduğunda</string>
+    <string name="out_of_stock_notification">%1$s&amp;apos;dan sadece %2$s kaldı!\nİlacı yakında yeniden doldurmayı düşünün.</string>
 </resources>
