--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="tab_settings">设置</string>
     <string name="tab_overview">概览</string>
@@ -181,4 +180,8 @@
     <string name="interval_start_processed">服用或跳过时开始间隔</string>
     <string name="every_interval">每 %s</string>
     <string name="invalid_input">无效输入</string>
+    <string name="off">关闭</string>
+    <string name="once_below_threshold">低于临界值时一次</string>
+    <string name="always_below_threshold">始终低于临界值</string>
+    <string name="out_of_stock_notification">只剩下%2$s的%1$s的药了!</string>
 </resources>
