--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,4 +195,5 @@
     <string name="out_of_stock_notification">Only %2$s of %1$s left!\nConsider refilling the medicine soon.</string>
     <string name="medicine_stock_string">%1$s left%2$s</string>
     <string name="out_of_stock_notification_title">Medicine refill reminder</string>
+    <string name="medicine_stock">Medicine stock</string>
 </resources>
