--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -194,4 +194,12 @@
     <string name="once_below_threshold">Una vez al caer por debajo del umbral</string>
     <string name="always_below_threshold">Siempre que esté por debajo del umbral</string>
     <string name="out_of_stock_notification">¡Sólo quedan %2$s de %1$s!\nConsidere rellenar la medicina pronto.</string>
+    <string name="medicine_stock_string">%1$s izquierda%2$s</string>
+    <string name="out_of_stock_notification_title">Recordatorio de medicamentos agotados</string>
+    <string name="medicine_stock">Stock de medicamentos</string>
+    <string name="amount">Cantidad</string>
+    <string name="out_of_stock_reminder">Recordatorio de existencias</string>
+    <string name="reminder_threshold">Umbral recordatorio</string>
+    <string name="refill_size">Tamaño del recargar</string>
+    <string name="refill_now">Recargar ahora</string>
 </resources>
