--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -194,7 +194,7 @@
     <string name="once_below_threshold">Une fois lors du passage en dessous du seuil</string>
     <string name="always_below_threshold">Toujours en dessous du seuil</string>
     <string name="out_of_stock_notification">Il ne reste plus que %2$s de %1$s!\nConsidérez de renouveler le médicament bientôt.</string>
-    <string name="medicine_stock_string">%1$s gauche%2$s</string>
+    <string name="medicine_stock_string">%1$s restants%2$s</string>
     <string name="out_of_stock_notification_title">Rappel de la réserve de médicaments</string>
     <string name="medicine_stock">Réserve de médicaments</string>
     <string name="amount">Numbre</string>
