--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -189,7 +189,7 @@
     <string name="once_below_threshold">Eşiğin altına düştüğünde bir kez</string>
     <string name="always_below_threshold">Her zaman eşiğin altında olduğunda</string>
     <string name="out_of_stock_notification">%1$s&amp;apos;dan sadece %2$s kaldı!\nİlacı yakında yeniden doldurmayı düşünün.</string>
-    <string name="medicine_stock_string">%1$s sol%2$s</string>
+    <string name="medicine_stock_string">%1$s kaldı%2$s</string>
     <string name="out_of_stock_notification_title">İlaç stokta yok hatırlatması</string>
     <string name="medicine_stock">İlaç stoğu</string>
     <string name="amount">Miktar</string>
